Let the formatter settle every brace it can safely read
palantir-java-format over 711 files, which is all of them but nineteen, plus
removeUnusedImports and an import order that keeps static imports first — the
tool's own default puts them last, and adopting that would have been a reformat
that quietly reversed a convention.

The nineteen are excluded for a tool defect, not a preference. palantir 2.97.0
corrupts JDK 23+ `///` markdown javadoc: when a `///` line is too long to fit it
wraps the content onto a new line without re-emitting the prefix, so the doc
comment becomes a statement and the file stops compiling. Run over the whole
tree it produced 11 corrupted files and 80 compile errors — and wrote them to
disk before reporting anything. formatJavadoc(false) does not help, the step
treating `///` as a line comment rather than javadoc.

The trigger is this project's own convention: doc comments carry ADR links whose
URLs are unbreakable tokens ninety characters long. The only way to shorten
those lines is to shorten the URLs, which are relative paths the book resolves,
so the choice was between breaking links and excluding files. The list is what
`spotlessApply --continue` reported rather than what I guessed, spotlessCheck
passing is what keeps it accurate, and the excluded files still get the
whitespace steps.

Blend2dContext carried a javadoc reference split across two lines, `[` on one
and the target on the next — the same defect found in TourState earlier, and the
same bare NoSuchElementException from inside a parser that would not say which
file it was reading. It is why :natives has Error Prone off. Fixed here, so
that exclusion can be revisited.

clean check is green: -Werror, Error Prone, NullAway, PMD, ArchUnit, the
coverage gates and every golden image.